--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </code>
             </div>
             <div>
-                <button type="button" class="btn bg-tertiary px-6 py-3 rounded shadow drop-shadow">Contact me</button>
+                <button type="button" class="cta-contact-btn bg-tertiary px-6 py-3 rounded shadow drop-shadow">Contact me</button>
             </div>
         </div>
 
@@ -226,27 +226,38 @@
 
                                 <div class="col-span-6 sm:col-span-3">
                                     <label for="name" class="block text-sm font-medium">Full name</label>
-                                    <input type="text" name="name" id="name" autocomplete="given-name" placeholder="John Doe" minlength="2" maxlength="120" required class="mt-1 block w-full rounded-md shadow shadow-inner focus:border-inferior focus:ring-inferior sm:text-sm text-secondary">
+                                    <input type="text" name="name" id="name" autocomplete="given-name"
+                                           placeholder="John Doe" minlength="2" maxlength="120" required
+                                           class="mt-1 block w-full rounded-md shadow shadow-inner focus:border-inferior focus:ring-inferior sm:text-sm text-secondary">
                                 </div>
 
                                 <div class="col-span-6 sm:col-span-3">
                                     <label for="email" class="block text-sm font-medium">Email address</label>
-                                    <input type="email" name="email" id="email" autocomplete="email" placeholder="example@domain.com" minlength="3" maxlength="31" required class="mt-1 block w-full rounded-md shadow shadow-inner focus:border-inferior focus:ring-inferior sm:text-sm text-secondary">
+                                    <input type="email" name="email" id="email" autocomplete="email"
+                                           placeholder="example@domain.com" minlength="3" maxlength="31" required
+                                           class="mt-1 block w-full rounded-md shadow shadow-inner focus:border-inferior focus:ring-inferior sm:text-sm text-secondary">
                                 </div>
 
                                 <div class="col-span-6 sm:col-span-3">
-                                    <label for="tel" class="block text-sm font-medium">Telephone number <span class="text-sm">(Optional)</span></label>
-                                    <input type="tel" name="tel" id="tel" placeholder="+00 123 45 678" minlength="8" maxlength="16" class="mt-1 block w-full rounded-md shadow shadow-inner focus:border-inferior focus:ring-inferior sm:text-sm text-secondary">
+                                    <label for="tel" class="block text-sm font-medium">Telephone number <span
+                                            class="text-sm">(Optional)</span></label>
+                                    <input type="tel" name="tel" id="tel" placeholder="+00 123 45 678" minlength="8"
+                                           maxlength="16"
+                                           class="mt-1 block w-full rounded-md shadow shadow-inner focus:border-inferior focus:ring-inferior sm:text-sm text-secondary">
                                 </div>
 
                                 <div class="col-span-6 sm:col-span-3">
                                     <label for="title" class="block text-sm font-medium">Subject</label>
-                                    <input type="text" name="title" id="title" placeholder="Subject title" minlength="3" maxlength="31" class="mt-1 block w-full rounded-md shadow shadow-inner focus:border-inferior focus:ring-inferior sm:text-sm text-secondary">
+                                    <input type="text" name="title" id="title" placeholder="Subject title" minlength="3"
+                                           maxlength="31"
+                                           class="mt-1 block w-full rounded-md shadow shadow-inner focus:border-inferior focus:ring-inferior sm:text-sm text-secondary">
                                 </div>
 
                                 <div class="col-span-6 sm:col-span-3">
                                     <label for="message" class="block text-sm font-medium">Message</label>
-                                    <textarea form="contact" name="message" id="message" autocomplete="off" rows="10" cols="20" placeholder="Hi, this is my message..." wrap="hard" required class="mt-1 block w-full rounded-md shadow shadow-inner focus:border-inferior focus:ring-inferior sm:text-sm text-secondary"></textarea>
+                                    <textarea form="contact" name="message" id="message" autocomplete="off" rows="10"
+                                              cols="20" placeholder="Hi, this is my message..." wrap="hard" required
+                                              class="mt-1 block w-full rounded-md shadow shadow-inner focus:border-inferior focus:ring-inferior sm:text-sm text-secondary"></textarea>
                                 </div>
                             </div>
                         </div>
@@ -255,7 +266,7 @@
 
                         <div class="px-4 py-3 text-right sm:px-6">
                             <button type="submit"
-                                    class="inline-flex justify-center rounded-md border border-inferior bg-inferior py-2 px-4 text-sm font-medium shadow-sm hover:bg-primary hover:border-primary hover:text-white focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2 shadow drop-shadow">
+                                    class="submitButton inline-flex justify-center rounded-md border border-inferior bg-inferior py-2 px-4 text-sm font-medium shadow-sm hover:bg-primary hover:border-primary hover:text-white focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2 shadow drop-shadow">
                                 Send
                             </button>
                         </div>
@@ -265,9 +276,22 @@
 
         </div>
     </section>
-
-
 </div>
+
+
+<div class="popup contact-popup hidden text-white absolute -mt-60 left-0 right-0 z-10">
+    <div class="flex justify-center">
+        <div class="flex flex-col items-center justify-center p-12 xs:px-4 sm:px-6 rounded shadow drop-shadow bg-tertiary">
+            <h1 class="result text-3xl font-bold mb-3">Submit successful!</h1>
+            <p class="text-sm text-center">Your message has been delivered, <span class="block sm:inline">and I will reply as soon as possible.</span></p>
+            <p class="text-sm mb-1 text-center">Thank you for taking time to message me, <span class="block sm:inline">it is very much appreciated!</span></p>
+            <button type="button" class="close-popup-btn close-contact-popup-btn btn bg-primary mt-6 px-6 py-2 rounded shadow drop-shadow font-bold">
+                No problem
+            </button>
+        </div>
+    </div>
+</div>
+
 
 </body>
 </html>
