added meta description and stylesheet link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Index</title>
+    <meta name="description" content="Welcome to my portfolio.
+    Here you will find some information about me,
+    as well as previous view projects I've made.
+    Feel free to contact me!">
+    <title>Silje Avena Angelvik</title>
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="/src/css/style.css">
+    <!-- Scripts -->
     <script type="module" src="/main.mjs" defer></script>
     <script type="module" src="/src/js/pages.mjs" defer></script>
     <script type="module" src="/src/js/contact.mjs" defer></script>
